src/test/deca/syntax/invalid/class/field/missing_initialisation_11.deca
// Description:
//    Tests a syntactically incorrect program for a class without initialisation of a field
//
// Results:
//    Line 10 : Error, duplicate field declaration.
//
// History:
//    created on 07/01/2025

class TestClass {
    int a = ;
}